--- a/templates/temp.html
+++ b/templates/temp.html
@@ -74,7 +74,7 @@ API SMS Sender WEBAPP
 <h4>Social Links:</h4>
 <a class="nav-link active" href="https://www.instagram.com/raj_bisen__/"><p><i class="fa fa-instagram"></i>  Instagram</p></a>
 <a class="nav-link active" href="https://www.facebook.com/rajbisen46"><p><i class="fa fa-facebook"></i>  Facebook</p></a>
-<a class="nav-link active" href="https://github.com/himreal9"><p><i class="fa fa-github"></i>  GitHub</p></a>
+<a class="nav-link active" href="https://github.com/Raajbisen/"><p><i class="fa fa-github"></i>  GitHub</p></a>
 
 
 </div>
