--- a/templates/temp.html
+++ b/templates/temp.html
@@ -82,7 +82,7 @@ API SMS Sender WEBAPP
 </div>
 
 <hr>
-<p class="copyright">Originate By <i class="fa fa-envelope"></i> Raj Bisen</p>
+<p class="copyright">Originated By <i class="fa fa-envelope"></i> Raj Bisen</p>
 </div>
 </section>
 
